# gw2-simple-event-timer

./: Cargo.toml  README.md
res/: events.json
src/: lib.rs
